--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body {
           <h3>Pantera</h3>
         </div>
         <div class="panel" style="background-image: url(pretas.jpg)">
-          <h3>Maio Luna e Mônica</h3>
+          <h3>Maia, Luna e Mônica</h3>
         </div>
   
       </div>
